[metadata]
name = weldx
author = Cagtay Fabry
author-email = Cagtay.Fabry@bam.de
home-page = https://www.bam.de/weldx
description = ASDF schema files of the WelDX standard
long-description = file: README.md
long_description_content_type = text/markdown
license = BSD License
license-file = LICENSE
platform = any
keywords =
    welding
    weldx
    bam
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://weldx-standard.readthedocs.io
    Source Code = https://github.com/BAMweldx/weldx-standard
    Bug Tracker = https://github.com/BAMweldx/weldx-standard/issues
    Changelog = https://github.com/BAMweldx/weldx-standard/blob/main/CHANGELOG.md

[options]
python_requires = >=3.8
setup_requires =
    setuptools >=38.3.0
    setuptools_scm
install_requires =
    asdf >=2.8.0
include_package_data = True

[options.extras_require]
test =
    pytest
    asdf >=2.8.0

[tool:pytest]
asdf_schema_root = resources/schemas
asdf_schema_tests_enabled = true
#asdf_schema_skip_tests =
#    list_schema_to_skip_here
norecursedirs = doc
